UPDATE Readme, better instructions, using Imgur assets